# grain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  rust.yml
caddy/: Caddyfile
data/: users.json
docs/: deployment.md
src/: admin.rs  args.rs  auth.rs  blobs.rs  errors.rs  gc.rs  health.rs  main.rs  manifests.rs  meta.rs  metrics.rs  middleware.rs  openapi.rs  permissions.rs  response.rs  state.rs  storage.rs  tags.rs  utils.rs  validation.rs
tests/: admin_api.rs  auth_permissions.rs  docker_client.rs  gc_operations.rs  health_metrics.rs  oci_endpoints.rs  storage_operations.rs
tests/common/: mod.rs
