[package]
name = "grain"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.27"
serde = { version = "1.0.210", features = ["derive"] }
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
serde_json = "1.0.128"
base64 = "0.22.1"
sha256 = "1.6.0"
