[package]
name = "grain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grain"
path = "src/main.rs"

[[bin]]
name = "grainctl"
path = "src/bin/grainctl.rs"

[dependencies]
env_logger = "0.11.5"
log = "0.4.27"
serde = { version = "1.0.210", features = ["derive"] }
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
serde_json = "1.0.128"
base64 = "0.22.1"
sha256 = "1.6.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.9.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
lazy_static = "1.4"
regex = "1.10"
prometheus = "0.14"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
serial_test = "3.0"

[features]
default = []
docker-tests = []
